Añadido menu de configuracion

--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -1,6 +1,7 @@
-db=Videoguejos
-user=root
+#Wed Oct 03 19:22:00 CEST 2018
 psw=
-target=localhost
-camposdb=id,Titulo,Descripcion,Dato
 tabla=videojuegos
+camposdb=id,Titulo,Descripcion,Dato
+user=root
+db=Videoguejos
+target=localhost
