--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -1,7 +1,8 @@
 #Wed Oct 03 19:22:00 CEST 2018
 psw=
-tabla=videojuegos
+tablaVd=videojuegos
 camposdb=id,Titulo,Descripcion,Dato
 user=root
 db=Videoguejos
 target=localhost
+tablaDs=desarrolladores
