Añadido metodo imprimir en Desarrollador y arregladas opciones

--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -1,8 +1,9 @@
-#Wed Oct 03 19:22:00 CEST 2018
-psw=
-tablaVd=videojuegos
-camposdb=id,Titulo,Descripcion,Dato
+#Sat Oct 13 14:49:13 CEST 2018
 user=root
 db=Videoguejos
+psw=
+tablaVd=videojuegos
+camposdb2=id, Nombre, Categoria
 target=localhost
 tablaDs=desarrolladores
+camposdb=id,Titulo,Descripcion,Dato
