Cosas yo no se ya

--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -6,4 +6,4 @@ tablaVd=videojuegos
 camposdb2=id,Nombre,Categoria
 target=localhost
 tablaDs=desarrolladores
-camposdb=id,Titulo,Descripcion,Dato
+camposdb=id,Titulo,Descripcion,Genero,Desarrollador
