Arreglos varios en vd

--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -1,9 +1,9 @@
-#Sat Oct 13 14:49:13 CEST 2018
-user=root
+#Sun Oct 14 21:03:31 CEST 2018
 db=Videoguejos
+user=root
 psw=
 tablaVd=videojuegos
 camposdb2=id,Nombre,Categoria
-target=localhost
 tablaDs=desarrolladores
-camposdb=id,Titulo,Descripcion,Genero,Desarrollador
+target=localhost
+camposdb=id,Titulo,Descripcion,Genero,Desarrolladora
