Reseted to commit d858cc3d6de2f8423fef2a8816cc9b22627a5b81

--- a/Jaime_Leer_Archivos/config.ini
+++ b/Jaime_Leer_Archivos/config.ini
@@ -1,8 +1,9 @@
-#Wed Oct 03 19:22:00 CEST 2018
+#Sun Oct 14 21:03:31 CEST 2018
+db=Videoguejos
+user=root
 psw=
 tablaVd=videojuegos
-camposdb=id,Titulo,Descripcion,Dato
-user=root
-db=Videoguejos
-target=localhost
+camposdb2=id,Nombre,Categoria
 tablaDs=desarrolladores
+target=localhost
+camposdb=id,Titulo,Descripcion,Genero,Desarrolladora
